# codexify-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements copy 2.txt  requirements.txt  working_requirements.txt
codexify-api/: hello.py  pyproject.toml
src/: README.md  config.py  db.py  dump.rdb  functions.py  main.py  model_urls.json  model_urls_reference.json  models.py  redis_configured.txt  utils.py  worker.py
